基础库封装

--- a/封装Base/index.html
+++ b/封装Base/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>封装</title>
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/base.js"></script>
     <script src="js/demo.js"></script>
 </head>
@@ -11,5 +12,18 @@
     <div id="b" name="h">456</div>
     <div id="c" class="ccc">789</div>
     <div id="d" class="ccc">987</div>
+
+    <div  class="menu">987</div>
+
+    <div class="container">
+        <div class="dropMenu">
+            <a href="javascript:void(0);">下拉框</a>
+            <ul class="menu">
+                <li><a href="#">菜单一</a></li>
+                <li><a href="#">菜单二</a></li>
+                <li><a href="#">菜单三</a></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
